--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>marks.dev</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://marks.dev/" />
+  <meta property="og:title" content="marks.dev" />
+  <meta property="og:image" content="https://marks.dev/_media/term.png" />
   <meta name="description" content="I'm me.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css" title="dark">
