yep, needed og:description

--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,7 @@
   <meta property="og:url" content="https://marks.dev/" />
   <meta property="og:title" content="marks.dev" />
   <meta property="og:image" content="https://marks.dev/_media/term.png" />
+  <meta property="og:description" content="I'm me." />
   <meta name="description" content="I'm me.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css" title="dark">
